Revision history for Perl extension AnyEvent.

5.21  Thu Nov 19 02:48:47 CET 2009
	- fix a problem where socket constants were called with parameters
          (spotted by David Friedland).
        - fork_call never use'd POSIX (reported by Daisuke Maki).
        - improve perl 5.6 compatibility further (but it still won't work
          unless you rip out everything but the core).
        - prefer Net::DNS::Resolver over ipconfig, if installed, on win32.
          uses 10MB of RAM, but doesn't open a console window. *sigh*.

5.202 Wed Oct 14 22:35:44 CEST 2009
	- AnyEvent::DNS would unexpectedly clobber $_ under windows
          (analysed by Matthias Waldorf).
        - AnyEvent::Handle::run_cmd can now pass the PID of the
          newly-created process, which is much less useful than it might
          sound (based on patch by Yann Kerherve).

5.201 Tue Sep 29 12:09:25 CEST 2009
	- AnyEvent:Handle::on_starttls/on_stoptls methods were broken
          (reported by Torsten Foertsch).
        - common::sense 2.0 could cause tcp_server to throw an exception
          (analysed by elmex).

5.2  Mon Sep 14 07:04:49 CEST 2009
	- INCOMPATIBLE CHANGE: do no longer support register_read_type
          and register_write_type in AnyEvent::Handle, instead support
          package names (the facility was mostly abused).
        - implement "packagename-as-read/write type" support in
          AnyEvent::Handle.
	- AnyEvent::Handle: new options "keepalive" and "oobinline".
        - oobinline set by default to avoid security issues.
        - the pure-perl event loop backend wrongly detected times() fallback
          support (spotted by Pavel Boldin).

5.12 Tue Sep  1 20:26:50 CEST 2009
	- be more lenient when parsing resolv.conf files, as some people
          use hashmarks as comment indicator inside directives (reported
          by Michael S. Fischer).
        - use same set of warnings as common::sense 2.0.