@@ -1,5 +1,8 @@
 Revision history for Perl extension AnyEvent.
 
+	- downgrade-or-fail in AnyEvent::Handle::push_write, to
+          diagnose encoding failures earlier and more succinctly.
+
 5.21  Thu Nov 19 02:48:47 CET 2009
 	- fix a problem where socket constants were called with parameters
           (spotted by David Friedland).
